# ISM330DHCX_CXX

./: CMakeLists.txt  README.md
examples/01_simple_example/: simple_example.cpp
examples/02_multi-threaded_logger/: ProcessData.cpp  ProcessData.h  main.cpp
examples/simple_example/: simple_example.cpp
figures/: dt_hist.tif  dt_scatter.tif  map.tif
include/: c_wire_.h  ism330dhcx.h  ism330dhcx_reg.h  sfe_ism330dhcx_defs.h  wire_.h
src/: c_wire_.cpp  ism330dhcx.cpp  ism330dhcx_reg.c  wire_.cpp
